--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ section {
   margin: 0 5vw;
 }
 
+.hero-image img {
+  margin: 0 auto;
+  align-items: center;
+}
+
 .about {
   display: flex;
   flex-direction: row;
@@ -172,4 +177,31 @@ button:hover {
   background-color: var(--color-darker);
   border: 2px solid var(--color-lighter);
   color: var(--color-light);
+}
+
+.footer {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #000;
+   */
+  background-color: var(--color-darker);
+  /* padding: 10rem; */
+  /* text-align: center; */
+}
+
+.footer h2 {
+  color: var(--color-light);
+  font-size: 10vh;
+  text-transform: lowercase;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+}
+
+.footer p {
+  color: var(--color-light);
+  font-size: 1.6rem;
 }
