--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Macondo&display=swap");
+
 :root {
   --color-primary: #d53f41;
   --color-dark: #626262;
@@ -18,7 +20,12 @@ body {
 
 body {
   font-family: "Kanit", sans-serif;
-  /* background-color: var(--color-lighter); */
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 1px;
+  background-color: white;
+  color: var(--color-darker);
 }
 
 html {
@@ -33,9 +40,83 @@ section {
   margin: 0 5vw;
 }
 
-.hero-image img {
-  margin: 0 auto;
+/* navbar start */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 2rem 0;
+  font-family: "Syncopate", sans-serif;
+  font-size: 1.8rem;
+}
+.links {
+  display: flex;
+  gap: 1rem;
+  font-weight: 700;
+}
+.links a {
+  color: var(--color-dark);
+  position: relative;
+  text-decoration: none;
+  font-size: 2.5rem;
+  font-family: "Macondo", cursive;
+}
+.links a::before {
+  content: "";
+  width: 0%;
+  height: 0.2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--color-primary);
+  transition: 0.5s;
+}
+
+.links a:hover::before {
+  width: 120%;
+}
+.logo a {
+  color: inherit;
+  /* font-family: "Anton", sans-serif; */
+  /* font-family: "Raleway", sans-serif; */
+  font-family: "Macondo", cursive;
+  font-size: 3rem;
+  letter-spacing: 0.2rem;
+  text-decoration: none;
+}
+/* hero */
+
+.hero {
+  text-transform: uppercase;
+  font-size: 10vw;
+  text-align: center;
+  line-height: 1;
+  color: var(--color-darker);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  position: relative;
+  transition: 1.5s;
+}
+
+.fashion,
+.agency {
+  position: relative;
+}
+.fashion span,
+.agency span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
 }
 
 .about {
@@ -88,6 +169,43 @@ section {
   padding: 2rem;
 }
 
+/* model start */
+
+.model h4 {
+  font-size: 5.6rem;
+  text-align: center;
+}
+.models {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 100vw;
+  margin-top: 6rem;
+}
+.models {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  gap: 3rem;
+}
+.models-image {
+  width: 25%;
+  height: 80rem;
+  overflow: hidden;
+  border: 1px solid var(--color-dark);
+}
+.models-image img {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  object-fit: cover;
+  filter: saturate(0) brightness(0.5);
+  transition: 0.5s ease-in-out;
+}
+.models-image:hover img {
+  filter: saturate(1) brightness(1);
+}
+
 .contact {
   display: flex;
   justify-content: space-around;
@@ -138,16 +256,6 @@ section {
   gap: 2rem;
 }
 
-/* input {
-  background: transparent;
-  height: 3rem;
-  padding: 2rem 10rem;
-  border: none;
-  font-size: 2rem;
-  font-family: inherit;
-  text-align: start;
-} */
-
 label {
   border-bottom: 1px solid var(--color-dark);
 }
@@ -155,7 +263,6 @@ label {
 input {
   width: 80rem;
   height: 8rem;
-  /* border-bottom: 1px solid var(--color-darker); */
   border: transparent;
   padding: 0 1rem;
   font-size: 1.5rem;
